--- a/index.html
+++ b/index.html
@@ -215,6 +215,38 @@
 				</div>
 				<img src="imgs/new/gallery/mushroom_cut.png" style="position:relative;top:20em;left:120%;height:50%;width:300%">
 			</div>
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:1em;left:20%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:3em;left:10%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:5em;left:50%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:7em;left:30%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:9em;left:40%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:11em;left:60%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:13em;left:70%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:15em;left:80%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:17em;right:20%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:19em;right:10%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:21em;right:50%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:23em;right:30%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:25em;right:40%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:27em;right:60%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:29em;right:70%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:31em;right:80%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:1em;right:20%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:3em;right:10%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:5em;right:50%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:7em;right:30%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:9em;right:40%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:11em;right:60%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:13em;right:70%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:15em;right:80%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:17em;left:20%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:19em;left:10%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:21em;left:50%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:23em;left:30%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:25em;left:40%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:27em;left:60%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:29em;left:70%">
+				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:31em;left:80%">
 			<div class="col-xs-11" style="height:95vh;overflow-y:hidden;font-family: 'Indie Flower', cursive">
 				<div class="row">
 					<div class="col-xs-6 left">
@@ -225,7 +257,7 @@
 			        <div class="row">
 			            <div class="col-sm-6" id="slider-thumbs" style="height:80vh;overflow-y:scroll">
 			                <!-- Bottom switcher of slider -->
-			                <ul class="hide-bullets" ng-repeat="pic in pics">
+			                <ul class="hide-bu>ets" ng-repeat="pic in pics">
 			                    <li class="col-sm-6">
 			                        <a class="thumbnail" ng-mouseover="show($index)" id="carousel-selector-{{$index}}">
 			                            <img src="imgs/pics/{{pic}}">
@@ -234,13 +266,13 @@
 			                    </li>
 			                </ul>
 			            </div>
-			            <div class="col-sm-6"  style="height:80vh;overflow-x:hidden;overflow-y:hidden;">
+			            <div class="col-sm-6"  style="height:80vh;overflow-x:scroll;overflow-y:scroll;">
 			                <div class="col-xs-12" id="slider">
 			                    <!-- Top part of the slider -->
 			                    <div class="row">
 			                        <div class="col-sm-12">
 	                                    <div class="active item text-center">
-	                                        <img style="margin:2%;height:120%;border-radius:5px;text-align: justify;" src="imgs/pics/{{selectedPic}}">
+	                                        <img style="margin:auto;height:120%;border-radius:5px;text-align: justify;" src="imgs/pics/{{selectedPic}}">
 	                                    </div>
 			                        </div>
 			                    </div>
@@ -317,6 +349,41 @@
 
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
     width: 100%;
+}
+
+/*Scrollbar*/
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #bc73f4;
+  border: 100px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #ffffff;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 100px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
 </style>
 </html>
