--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 	<div class="section home" style="height:100vh;overflow-y:hidden">
 		<img class="home_images" src="imgs/new/1_page/sky_clouds.png">
 		<div class="row">
-			<img style="z-index:498;margin:0 0 0 15%;height:55%;width:60%" class="home_images" src="imgs/new/1_page/logo.png">
+			<img style="z-index:599;margin:0 0 0 15%;height:55%;width:60%" class="home_images img-responsive" src="imgs/new/1_page/logo.png">
 		</div>
 		<!-- <span class="landing_title">S A A R A N G</span> -->
 		<!-- <img style="z-index:599;" class="home_images" src="imgs/new/1_page/landing_page.png"> -->
 		<!-- <img style="z-index:599;" class="home_images" src="imgs/new/1_page/tag_line.png"> -->
 		<!-- <span class="tag_line">THE ENCHANTED FOREST</span> -->
-		<img style="z-index:499;top:13.5em;right:42%;height:70%;width:34%" class="home_images" src="imgs/new/1_page/rock_tree_cut.png">
+		<img style="z-index:499;top:13.5em;right:40%;height:70%;width:34%" class="home_images" src="imgs/new/1_page/rock_tree_cut.png">
 	    <!-- <img style="z-index:399;top:3em;right:34%;height:70%;width:34%" class="home_images" src="imgs/new/1_page/moon_cut.png"> -->
 	    <!--<img style="z-index:1099;" class="home_images" src="imgs/new/1_page/fairies_2.png">
 	    <img style="z-index:1099;" class="home_images" src="imgs/new/1_page/fairies_1.png">-->
@@ -110,7 +110,7 @@
 			<img src="imgs/new/About_us/clouds/11_new.png" style="width: 60%;">
 		</span>
 		<div class="col-xs-2 hidden-sm hidden-xs" id="title">
-			<div class="page_title">
+			<div class="page_title" style="font-family: 'Oswald', sans-serif;">
 				ABOUT&nbsp;US
 			</div>
 		</div>
@@ -141,7 +141,7 @@
 	<!-- Spons -->
 	<div class="section spons" ng-controller="sponsCtrl" style="margin-top:2%;height:110vh;overflow-x:hidden">
 		<div class="col-xs-2 hidden-sm hidden-xs" id="spons_title">
-			<div class="page_title">
+			<div class="page_title" style="font-family: 'Oswald', sans-serif;">
 				SPONSORS
 			</div>
 			<img src="imgs/new/sponsors/owl.png" style="z-index:-1;position:relative;top:20em;left:10%;height:50%;width:100%">
@@ -150,11 +150,11 @@
 			<div class="container-fluid">
 		    	<div class="row">
 		    		<div class="col-xs-6 left">
-		    			<h1 style="letter-spacing:3px;font-family: 'Indie Flower', cursive">SAARANG 2016</h1>
+		    			<h1 style="letter-spacing:3px;font-family: 'Oswald', sans-serif;">SAARANG 2016</h1>
 		    		</div>
 		    		<div class="col-xs-3 col-xs-offset-3 right brochure_link hidden-sm hidden-xs">
 		    			<a href="http://sponsors.saarang.org/" target="_blank">
-		    				<h2 style="letter-spacing:2px;border:5px solid #8b66a8;border-radius:5px;text-align:center;font-family: 'Varela Round', sans-serif">
+		    				<h2 style="letter-spacing:2px;border:5px solid #8b66a8;border-radius:5px;text-align:center;font-family: 'Oswald', sans-serif;">
 		    					<b>
 		    					<svg height="20" width="20">
 		  							<circle cx="20" cy="20" r="20" stroke="black" stroke-width="0" fill="#8b66a8" />
@@ -216,7 +216,7 @@
 	<!-- Galery -->
 	<div class="section gallery" ng-controller="galleryCtrl">
 		<div class="row" style="width:100%;overflow-x:hidden">
-			<div class="col-xs-2 hidden-sm hidden-xs" id="gallery_title">
+			<div class="col-xs-2 hidden-sm hidden-xs" id="gallery_title" style="font-family: 'Oswald', sans-serif;">
 				<div class="page_title">
 					GALLERY
 				</div>
@@ -243,10 +243,10 @@
 				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:21em;left:50%">
 				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:23em;left:30%">
 				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:27em;left:60%">
-			<div class="col-xs-10" style="height:95vh;overflow-y:hidden;font-family: 'Indie Flower', cursive">
+			<div class="col-xs-10" style="height:95vh;overflow-y:hidden;">
 				<div class="row">
 					<div class="col-xs-6 left">
-		    			<h1 style="letter-spacing:3px">SAARANG memories...</h1>
+		    			<h1 style="letter-spacing:3px;font-family: 'Oswald', sans-serif;">SAARANG memories...</h1>
 		    		</div>
 				</div>
 				<div id="main_area" style="height:82vh;overflow-y:hidden;overflow-x:hidden">
@@ -282,7 +282,7 @@
 	<hr>
 	<!-- Contact us -->
 	<div class="section contact" ng-controller="contactCtrl">
-		<div class="col-xs-2 hidden-sm hidden-xs" id="contact_title">
+		<div class="col-xs-2 hidden-sm hidden-xs" id="contact_title" style="font-family: 'Oswald', sans-serif;">
 			<div class="page_title">
 				CONTACT&nbsp;US
 			</div>
