--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 	<title>Saarang 2017</title>
+	<style type="text/css">
+	.parent
+	{
+  		width: 100%;
+  		border-bottom: 4px solid #CCCCCC;
+  		position: relative;
+	}
+	.child {
+  		background: #ffffff;
+  		width: 41px;
+  		height: 40px;
+  		border-radius: 50%;
+  		border:2px solid #CCCCCC;
+		position: absolute;
+		content:'';
+		top: -18px;
+	}
+	.child {
+  		left: 80%;
+  		margin-left: -8px;
+	}
+	</style>
 
 <!-- 	<script type="text/javascript">
 		$('.scene').parallax();
@@ -112,6 +134,7 @@
 		<div class="col-xs-2 hidden-sm hidden-xs" id="title">
 			<div class="page_title" style="font-family: 'Oswald', sans-serif;">
 				ABOUT&nbsp;US
+				<div class="parent"><div class="child"></div></div>
 			</div>
 		</div>
 		<div class="col-xs-10">
@@ -143,6 +166,7 @@
 		<div class="col-xs-2 hidden-sm hidden-xs" id="spons_title">
 			<div class="page_title" style="font-family: 'Oswald', sans-serif;">
 				SPONSORS
+				<div class="parent"><div class="child"></div></div>
 			</div>
 			<img src="imgs/new/sponsors/owl.png" style="z-index:-1;position:relative;top:20em;left:10%;height:50%;width:100%">
 		</div>
@@ -152,13 +176,13 @@
 		    		<div class="col-xs-6 left">
 		    			<h1 style="letter-spacing:3px;font-family: 'Oswald', sans-serif;">SAARANG 2016</h1>
 		    		</div>
-		    		<div class="col-xs-3 col-xs-offset-3 right brochure_link hidden-sm hidden-xs">
+		    		<div class="col-xs-3 col-xs-offset-3 right brochure_link hidden-sm hidden-xs" style="padding:0 3.5% 0 3.5%">
 		    			<a href="http://sponsors.saarang.org/" target="_blank">
-		    				<h2 style="letter-spacing:2px;border:5px solid #8b66a8;border-radius:5px;text-align:center;font-family: 'Oswald', sans-serif;">
+		    				<h2 style="letter-spacing:2px;border:5px solid #8b66a8;text-align:center;font-family: 'Oswald', sans-serif;">
 		    					<b>
-		    					<svg height="20" width="20">
+		    					<!-- <svg height="20" width="20">
 		  							<circle cx="20" cy="20" r="20" stroke="black" stroke-width="0" fill="#8b66a8" />
-								</svg>
+								</svg> -->
 								BROCHURE
 								</b>
 							</h2>
@@ -219,6 +243,7 @@
 			<div class="col-xs-2 hidden-sm hidden-xs" id="gallery_title" style="font-family: 'Oswald', sans-serif;">
 				<div class="page_title">
 					GALLERY
+					<div class="parent"><div class="child"></div></div>
 				</div>
 				<img src="imgs/new/gallery/mushroom_cut.png" style="position:relative;top:20em;left:120%;height:50%;width:120%">
 			</div>
@@ -253,7 +278,7 @@
 			        <div class="row">
 			            <div class="col-sm-6" id="slider-thumbs" style="height:80vh;overflow-y:scroll">
 			                <!-- Bottom switcher of slider -->
-			                <ul class="hide-bu>ets" ng-repeat="pic in pics">
+			                <ul class="hide-bullets" ng-repeat="pic in pics">
 			                    <li class="col-sm-6">
 			                        <a class="thumbnail" ng-mouseover="show($index)" id="carousel-selector-{{$index}}">
 			                            <img src="imgs/pics/{{pic}}">
@@ -262,16 +287,11 @@
 			                    </li>
 			                </ul>
 			            </div>
-			            <div class="col-sm-6"  style="height:80vh;overflow-x:scroll;overflow-y:scroll;">
-			                <div class="col-xs-12" id="slider">
-			                    <!-- Top part of the slider -->
-			                    <div class="row">
-			                        <div class="col-sm-12">
-	                                    <div class="active item text-center">
-	                                        <img style="margin:auto;height:120%;border-radius:5px;text-align: justify;" src="imgs/pics/{{selectedPic}}">
-	                                    </div>
-			                        </div>
-			                    </div>
+			            <div class="col-sm-6 hidden-xs" style="width:50%;max-height:78%;position:absolute;right:0;top:40%;margin:-100px 0 0 -150px;overflow-y:scroll;overflow-x:hidden">
+			                <div class="col-xs-12">
+	                            <div class="active item text-center">
+	                                <img style="margin:auto;height:120%;border-radius:5px;text-align: justify;" src="imgs/pics/{{selectedPic}}">
+	                            </div>
 			                </div>
 			            </div>
 			        </div>
@@ -285,6 +305,7 @@
 		<div class="col-xs-2 hidden-sm hidden-xs" id="contact_title" style="font-family: 'Oswald', sans-serif;">
 			<div class="page_title">
 				CONTACT&nbsp;US
+				<div class="parent"><div class="child"></div></div>
 			</div>
 		</div>
 		<div class="col-xs-10" style="font-family: 'Varela Round', sans-serif">
