--- a/index.html
+++ b/index.html
@@ -59,19 +59,20 @@
 	</script> -->
 </head>
 <body style="background-color: #f8f9ff;" ng-app="myApp">
-	<div class="section home" style="height:100vh;overflow-y:hidden">
+	<div class="section home" style="height:100vh;overflow:hidden">
 		<img class="home_images" src="imgs/new/1_page/sky_clouds.png">
-		<div class="row">
-			<img style="z-index:599;margin:0 0 0 15%;height:55%;width:60%" class="home_images img-responsive" src="imgs/new/1_page/logo.png">
+		<div class="row hidden-sm hidden-xs">
+			<img style="z-index:599;margin:0 0 0 15%;height:55vh;width:60%" class="home_images img-responsive" src="imgs/new/1_page/logo.png">
 		</div>
-		<!-- <span class="landing_title">S A A R A N G</span> -->
-		<!-- <img style="z-index:599;" class="home_images" src="imgs/new/1_page/landing_page.png"> -->
-		<!-- <img style="z-index:599;" class="home_images" src="imgs/new/1_page/tag_line.png"> -->
-		<!-- <span class="tag_line">THE ENCHANTED FOREST</span> -->
-		<img style="z-index:499;top:13.5em;right:40%;height:70%;width:34%" class="home_images" src="imgs/new/1_page/rock_tree_cut.png">
-	    <!-- <img style="z-index:399;top:3em;right:34%;height:70%;width:34%" class="home_images" src="imgs/new/1_page/moon_cut.png"> -->
-	    <!--<img style="z-index:1099;" class="home_images" src="imgs/new/1_page/fairies_2.png">
-	    <img style="z-index:1099;" class="home_images" src="imgs/new/1_page/fairies_1.png">-->
+		<!-- for mobile -->
+		<div class="row hidden-md hidden-lg">
+			<img style="z-index:599;margin:0 0 0 10%;height:55vh;width:80%" class="home_images img-responsive" src="imgs/new/1_page/logo.png">
+		</div>
+		<!--  -->
+		<img style="z-index:499;top:13.5em;right:40%;height:70%;width:34%" class="home_images hidden-xs hidden-sm" src="imgs/new/1_page/rock_tree_cut.png">
+		<!-- for mobile -->
+		<img style="z-index:499;top:10.5em;right:35%;height:50%;width:34%" class="home_images hidden-md hidden-lg" src="imgs/new/1_page/rock_tree_cut.png">
+		<!--  -->
 	    <img style="z-index:1199;" class="home_images" src="imgs/new/1_page/glow.png">
 	    <img id="light1" style="z-index:1079;" class="light_images" src="imgs/new/1_page/light_modified.png">
 	    <img id="light2" style="z-index:1089;" class="light_images" src="imgs/new/1_page/light_modified.png">
@@ -92,9 +93,9 @@
 	    <img style="z-index:699;top:75vh;height:25%;width:100%" class="home_images" src="imgs/new/1_page/trees_1_cut.png">
 		<img style="z-index:899;top:75vh;height:25%;width:100%" class="home_images" src="imgs/new/1_page/trees_2_cut.png">
 		<img id="tree" style="z-index:999;top:75vh;height:25%;width:100%" class="home_images" src="imgs/new/1_page/trees_3_cut.png">
-		<img style="z-index:9999;top:95vh;left:8%;height:5%;width:40%" class="home_images" src="imgs/new/1_page/scroll_down_cut_line.png">
-		<img style="z-index:9999;top:96vh;left:49%;width:2%;height:3%" class="home_images scroll" src="imgs/new/1_page/scroll_down_cut_arrow.png">
-		<img style="z-index:9999;top:95vh;right:8%;height:5%;width:40%" class="home_images" src="imgs/new/1_page/scroll_down_cut_line.png">
+		<!-- <img style="z-index:9999;top:95vh;left:8%;height:5%;width:40%" class="home_images" src="imgs/new/1_page/scroll_down_cut_line.png"> -->
+		<img style="z-index:9999;top:96vh;left:49%;width:2.25%;height:4%;padding:3px;border:1px solid white;border-radius:50%" class="home_images scroll" src="imgs/new/1_page/scroll_down_cut_arrow.png">
+		<!-- <img style="z-index:9999;top:95vh;right:8%;height:5%;width:40%" class="home_images" src="imgs/new/1_page/scroll_down_cut_line.png"> -->
 	</div>
 	<!-- About_us -->
 	<div class="about section" style="margin-top:2%;height:100vh;overflow-x:hidden">
@@ -131,18 +132,18 @@
 		<span class="cloud11">
 			<img src="imgs/new/About_us/clouds/11_new.png" style="width: 60%;">
 		</span>
-		<div class="col-xs-2 hidden-sm hidden-xs" id="title">
+		<div class="col-md-2 col-xs-2 hidden-sm hidden-xs" id="title">
 			<div class="page_title" style="font-family: 'Oswald', sans-serif;">
 				ABOUT&nbsp;US
 				<div class="parent"><div class="child"></div></div>
 			</div>
 		</div>
-		<div class="col-xs-10">
+		<div class="col-md-10 col-md-offset-0 col-xs-10 col-xs-offset-1">
 			<div class="row" id="images">
-				<div class="col-xs-4" id="tree_img">
+				<div class="col-md-4 col-xs-4 hidden-xs" id="tree_img">
 					<img src="imgs/new/About_us/tree_new.png" style="height:60%;">
 				</div>
-				<div class="col-xs-8" id="pic_img">
+				<div class="col-xs-12 col-md-8" id="pic_img">
 					<div class="img_border"></div>
 					<img src="imgs/new/About_us/picture_new.png" style="height: 85%; width:80%;">
 				</div>
@@ -163,28 +164,25 @@
 	<hr>
 	<!-- Spons -->
 	<div class="section spons" ng-controller="sponsCtrl" style="margin-top:2%;height:110vh;overflow-x:hidden">
-		<div class="col-xs-2 hidden-sm hidden-xs" id="spons_title">
+		<div class="col-md-2 hidden-sm hidden-xs" id="spons_title">
 			<div class="page_title" style="font-family: 'Oswald', sans-serif;">
 				SPONSORS
 				<div class="parent"><div class="child"></div></div>
 			</div>
 			<img src="imgs/new/sponsors/owl.png" style="z-index:-1;position:relative;top:20em;left:10%;height:50%;width:100%">
 		</div>
-		<div class="col-xs-10" style="font-family: 'Varela Round', sans-serif">
+		<div class="col-md-10 col-md-offset-0 col-xs-10 col-xs-offset-1" style="font-family: 'Varela Round', sans-serif">
 			<div class="container-fluid">
 		    	<div class="row">
-		    		<div class="col-xs-6 left">
-		    			<h1 style="letter-spacing:3px;font-family: 'Oswald', sans-serif;">SAARANG 2016</h1>
+		    		<div class="col-md-6 col-sm-6 col-xs-12 left">
+		    			<h1 style="letter-spacing:3px;font-family: 'Oswald', sans-serif;">
+		    			<a href="http://sponsors.saarang.org/">SAARANG 2016</a>
+		    			</h1>
 		    		</div>
-		    		<div class="col-xs-3 col-xs-offset-3 right brochure_link hidden-sm hidden-xs" style="padding:0 3.5% 0 3.5%">
+		    		<div class="col-xs-12 col-md-3 col-sm-6  col-md-offset-3 right brochure_link" style="padding:0 3.5% 0 3.5%">
 		    			<a href="http://sponsors.saarang.org/" target="_blank">
 		    				<h2 style="letter-spacing:2px;border:5px solid #8b66a8;text-align:center;font-family: 'Oswald', sans-serif;">
-		    					<b>
-		    					<!-- <svg height="20" width="20">
-		  							<circle cx="20" cy="20" r="20" stroke="black" stroke-width="0" fill="#8b66a8" />
-								</svg> -->
-								BROCHURE
-								</b>
+		    					<b>BROCHURE</b>
 							</h2>
 						</a>
 		    		</div>
@@ -240,7 +238,7 @@
 	<!-- Galery -->
 	<div class="section gallery" ng-controller="galleryCtrl">
 		<div class="row" style="width:100%;overflow-x:hidden">
-			<div class="col-xs-2 hidden-sm hidden-xs" id="gallery_title" style="font-family: 'Oswald', sans-serif;">
+			<div class="col-md-2 hidden-sm hidden-xs" id="gallery_title" style="font-family: 'Oswald', sans-serif;">
 				<div class="page_title">
 					GALLERY
 					<div class="parent"><div class="child"></div></div>
@@ -268,16 +266,15 @@
 				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:21em;left:50%">
 				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:23em;left:30%">
 				<img src="imgs/new/gallery/pollen_cut.png" style="position:absolute;margin-top:150%;top:27em;left:60%">
-			<div class="col-xs-10" style="height:95vh;overflow-y:hidden;">
+			<div class="col-xs-offset-1 col-xs-10 col-md-10 col-md-offset-0" style="height:95vh;overflow-y:hidden;">
 				<div class="row">
-					<div class="col-xs-6 left">
+					<div class="col-xs-12 left">
 		    			<h1 style="letter-spacing:3px;font-family: 'Oswald', sans-serif;">SAARANG memories...</h1>
 		    		</div>
 				</div>
 				<div id="main_area" style="height:82vh;overflow-y:hidden;overflow-x:hidden">
 			        <div class="row">
 			            <div class="col-sm-6" id="slider-thumbs" style="height:80vh;overflow-y:scroll">
-			                <!-- Bottom switcher of slider -->
 			                <ul class="hide-bullets" ng-repeat="pic in pics">
 			                    <li class="col-sm-6">
 			                        <a class="thumbnail" ng-mouseover="show($index)" id="carousel-selector-{{$index}}">
@@ -302,13 +299,13 @@
 	<hr>
 	<!-- Contact us -->
 	<div class="section contact" ng-controller="contactCtrl">
-		<div class="col-xs-2 hidden-sm hidden-xs" id="contact_title" style="font-family: 'Oswald', sans-serif;">
+		<div class="col-md-2 hidden-sm hidden-xs" id="contact_title" style="font-family: 'Oswald', sans-serif;">
 			<div class="page_title">
 				CONTACT&nbsp;US
 				<div class="parent"><div class="child"></div></div>
 			</div>
 		</div>
-		<div class="col-xs-10" style="font-family: 'Varela Round', sans-serif">
+		<div class="col-md-10 col-md-offset-0 col-xs-10 col-xs-offset-1" style="font-family: 'Varela Round', sans-serif">
 			<div class="row">
 		        <div class="col-lg-12 help-text">
 		            <h2 class="text-center" style="font-family: 'Oswald', sans-serif;"><b>Saarang 2017 Team</b></h2>
