--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<!-- <img style="z-index:9999;top:95vh;right:8%;height:5%;width:40%" class="home_images" src="imgs/new/1_page/scroll_down_cut_line.png"> -->
 	</div>
 	<!-- About_us -->
-	<div class="about section" style="margin-top:2%;height:100vh;overflow:hidden">
+	<div class="about section" style="margin-top:2%;overflow:hidden">
 		<span class="cloud01">
 			<img src="imgs/new/About_us/clouds/01_new.png">
 		</span>
